hello-service/src/main/kubefiles/canary-deployment/virtual-services/others/header-based-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quarkus-hello-only-safari
  namespace: quarkus-hello-demo
spec:
  gateways:
  - quarkus-hello-gateway
  hosts:
  - "*"
  http:
  - match:
    - headers:
        user-agent:
          regex: .*Safari.*
    route:
    - destination:
        host: quarkus-hello
        port:
          number: 8080
        subset: green
  - route:
    - destination:
        host: quarkus-hello
        port:
          number: 8080
        subset: blue
